--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,14 @@ matrix:
   include:
     - env: DBTYPE=sqlite LANG=ru MW=master WB=both
       php: 5.5
-    - env: DBTYPE=sqlite LANG=en MW=master WB=client
-      php: 5.5
-    - env: DBTYPE=mysql LANG=en MW=master WB=repo
-      php: 5.6
-    - env: DBTYPE=sqlite LANG=ar MW=master WB=both
-      php: 7.0
-    - env: DBTYPE=mysql LANG=en MW=master WB=both
-      php: hhvm
+#    - env: DBTYPE=sqlite LANG=en MW=master WB=client
+#      php: 5.5
+#    - env: DBTYPE=mysql LANG=en MW=master WB=repo
+#      php: 5.6
+#    - env: DBTYPE=sqlite LANG=ar MW=master WB=both
+#      php: 7.0
+#    - env: DBTYPE=mysql LANG=en MW=master WB=both
+#      php: hhvm
 
 before_script:
     - bash ./build/travis/install.sh
@@ -27,18 +27,9 @@ script:
 notifications:
   email:
     recipients:
-      - wikidata-ci-status@wikimedia.de
       - leszek.manicki@wikimedia.de
-      - Ladsgroup@gmail.com
     on_success: change
     on_failure: always
-  irc:
-    channels:
-      - "chat.freenode.net#wikidata-feed"
-    on_success: change
-    on_failure: always
-    template:
-      - "%{repository}/%{branch}/%{commit} : %{author} %{message} %{build_url}"
 
 cache:
   directories:
